# mushysoft_admin

./: README.md  pyproject.toml  service.py  utils.py
mushysoft_admin/: __init__.py  admin.py  auth.py  config.py
src/: admin.py  router.py
src/templates/: index.html
static/: styles.css
